# Code

IPI/U10/: Faust  Faust.cc  Fehler
IPI/U11/: A2  A2t  array.cc  main.cc
IPI/U3/: fcpp.hh
IPI/U4/: Pascall  Pascall2  Pascall2.cc
IPI/U5/: 2a  2a.cc  2b  Pi  Pi.cc
IPI/U7/: rpn  rpuf
IPI/U8/: baum  baum2.cc  mandelbrot  save_image.hh
IPI/U9/: List
IPK/----->!!IPI_für_Justin_HIER_Klicken!!<-------/: NewTon.cc
IPK/uebung05/: toString  toString2.cc
IPK/uebunng09/: Mittelwert.cc
IPK2/----->!!IPI_für_Justin_HIER_Klicken!!<-------/: arraysort.cc
IPK2/Firework/: Firework.h  Fountain.cc  Game.cc  Game.h  Makefile  Normal.cc  Terminal.cc  Terminal.h  Vec2D.h  firework
IPK2/U1/: A4  A5  A6.cc
IPK2/U2/: A2  A2 (Kopie).cc  A3.cc  A4  A5  A6  A6.cc
IPK2/U6/: Book.cpp  Library.cpp  Library.h  main  main.cpp
IPK2/U8/: Node.cc
IPK2/uebung05/: Potenz.cc  toString.cc  toString2
IPK2/uebunng09/: baum.cc  canvas.hh  mandelbrot.pgm
NurSo/: 7.3  HelloSukri  Modulo  SimpleTerminalGame  array  ascii  ascii.cc  color  color.cc  test
NurSo/IPK_Uebung/: Funktor.cc  Student.cc
NurSo/Other/: Essen.sh  FiFofürJustinsSo  FiFofürJustinsSo.cc  unharmonisch.py
NurSo/Sudoku/: Sudoku
NurSo/Usefull/: Modulo.cc  ascii  ascii.cc  ncolor.cc  watch.cc
NurSo/Zoo/: Tier.cc  main.cc
NurSo/adventure/: main  main.cc  raum.cc  räume
NurSo/headertest#/: header.hh  header.hh.gch
NurSo/tests/: 7.3.cc  HelloSukri.cpp  Pythonisscheisse.py  array.cc  pythonüberlaf.py  test  (+3 more)
uebung06/6.1/: CMakeLists.txt
uebung06/6.1/release-build/: uniformv
uebunng09/: mandelbrot
(+262 files in other folders)
